# qernel

./: .gitignore  .pylintrc  Cargo.toml  LICENSE  README.md  __init__.py  hello_world.py  hwnew.py  hwviz.py  pyproject.toml  requirements.txt  setup.py  test_algorithm.py  test_spec.yaml
.github/: install-qernel.sh
.github/workflows/: nightly.yml  test-algorithm.yml
agent/: Cargo.toml
client/: __init__.py  qernel_client.py
examples/: __init__.py  bernstein_vazirani.py  hello_world.py  recycled.py  reload_artifacts.py  stim_example.py
examples/hello_world/: __init__.py  algorithm.py  spec.yaml
examples/monte_carlo/: __init__.py  algorithm.py  spec.yaml
qernel/: __init__.py
qernel/core/: algorithm.py  client.py
qernel/core/client/: __init__.py  client.py  config.py  exceptions.py  models.py  task_summary.py
qernel/vis/: __init__.py  terminal.py  visualizer.py
qernel/vis/html/: builder.py  constants.py
src/: README.md  config.rs  lib.rs  main.rs  util.rs
src/cmd/: login.rs  mod.rs  new.rs  provider.rs  pull.rs  push.rs  see.rs
src/cmd/explain/: chunk.rs  mod.rs  network.rs  preflight.rs  prompts.rs  renderer.rs  run.rs
src/cmd/prototype/: agent.rs  console.rs  environment.rs  logging.rs  mineru.rs  mod.rs  network.rs  prompts.rs  snapshots.rs  validation.rs
src/common/: network.rs
src/exe/: turn_diff_tracker.rs
src/exe/apply-patch/: Cargo.toml  apply_patch_tool_instructions.md
src/exe/apply-patch/src/: lib.rs  protocol.rs  standalone_executable.rs  turn_diff_tracker.rs
src/exe/core/: Cargo.toml
src/exe/core/src/: bash.rs  codex.rs  exec.rs  lib.rs  parse_command.rs  protocol.rs  shell.rs  tool_apply_patch.rs
src/exe/core/src/unified_exec/: errors.rs  mod.rs
src/exe/core/tests/: smoke.rs
template/: __init__.py  algorithm.py  algorithm_template.py  spec.yaml  test_algorithm.py
test/: __init__.py  test_algorithm.py  test_visualization.py
vision/: Cargo.toml
vision/src/: lib.rs
