[package]
name = "qernel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
colored = "2"
confy = "0.6"
indicatif = "0.17"
rpassword = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
which = "6"
