[package]
name = "qernel"
version = "0.1.0-alpha"
edition = "2024"
description = "An agentic CLI to prototype and share quantum code."
readme = "README.md"
homepage = "https://qernel.sh"
repository = "https://github.com/computabeast/qernel"
license = "Apache-2.0"
keywords = ["quantumcomputing", "cli", "quantum", "algorithms", "ai"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
colored = "2"
confy = "0.6"
indicatif = "0.17"
rpassword = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
which = "6"
owo-colors = "4"
supports-color = "3"
qernel_codex_core = { package = "qernel-codex-core-shim", path = "src/exe/core", version = "0.1.0-alpha" }
qernel_apply_patch = { package = "qernel-apply-patch-shim", path = "src/exe/apply-patch", version = "0.1.0-alpha" }
async-channel = "2"
crossbeam-channel = "0.5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "signal", "sync", "io-std", "io-util"] }
shlex = "1"
url = "2.5"
regex = "1.11"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
syntect = "5.3"

[workspace]
members = [
    ".",
    "src/exe/apply-patch",
    "src/exe/core",
]

[workspace.package]
version = "0.1.0-alpha"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
similar = "2"
tree-sitter = "0.22"
tree-sitter-bash = "0.21"
assert_cmd = "2"
pretty_assertions = "1"
tempfile = "3"
sha1 = "0.10"
uuid = { version = "1", features = ["v4"] }
async-channel = "2"
bytes = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["io-std", "macros", "process", "rt-multi-thread", "signal", "io-util", "time", "sync"] }
tracing = { version = "0.1", features = ["log"] }
which = "6"
shlex = "1"

[workspace.lints.rust]
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"
