[package]
edition = "2024"
name = "codex-apply-patch"
version = { workspace = true }

[lib]
name = "codex_apply_patch"
path = "src/lib.rs"

[[bin]]
name = "apply_patch"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
sha1 = { workspace = true }
uuid = { workspace = true }
once_cell = "1"
crossbeam-channel = "0.5"
codex_core = { package = "codex-core-shim", path = "../core" }

[dev-dependencies]
assert_cmd = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
